--- a/crwn-clothing/src/index.scss
+++ b/crwn-clothing/src/index.scss
@@ -1,13 +1,9 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
   margin: 0;
-  font-family: 'Open Sans', sans-serif;
+  padding: 20px 40px;
+  font-family: 'Open Sans Condensed', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  padding: 20px 40px;
 }
 
 code {
@@ -18,4 +14,8 @@ code {
 a {
   text-decoration: none;
   color: black;
+}
+
+* {
+  box-sizing: border-box;
 }
