--- a/projects/react-hook-form-with-mui/src/components/Forms/ShippingForm.module.scss
+++ b/projects/react-hook-form-with-mui/src/components/Forms/ShippingForm.module.scss
@@ -11,6 +11,13 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+
+    .boxContainer {
+      display: flex;
+      flex-direction: row;
+      gap: 1rem;
+      width: 100%;
+    }
   }
 
   .twoColumn {
